--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'application'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    id 'org.jetbrains.kotlin.jvm' version "1.3.72"
     id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
@@ -15,22 +15,28 @@ repositories {
     jcenter()
 }
 
+def kotlinVersion = "1.3.72"
+def http4kVersion = "3.252.0"
+def log4jVersion = "2.13.3"
+def jacksonVersion = "2.10.0"
+
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation group: "org.jetbrains.kotlin", name: "kotlin-stdlib-jdk8", version: kotlinVersion
 
-    compile group: "org.http4k", name: "http4k-core", version: "3.239.0"
-    compile group: "org.http4k", name: "http4k-server-undertow", version: "3.239.0"
-    compile group: "org.http4k", name: "http4k-client-apache", version: "3.239.0"
-    compile group: "org.flywaydb", name: "flyway-core", version: "6.3.1"
-    compile group: "com.h2database", name: "h2", version: "1.4.197"
-    compile group: "org.jetbrains.exposed", name: "exposed-core", version: "0.22.1"
-    compile group: "org.jetbrains.exposed", name: "exposed-dao", version: "0.22.1"
-    compile group: "org.jetbrains.exposed", name: "exposed-jdbc", version: "0.22.1"
-    compile group: "org.postgresql", name: "postgresql", version: "42.2.11"
-    compile group: "org.slf4j", name: "slf4j-api", version: "1.7.30"
-    compile group: "org.slf4j", name: "slf4j-simple", version: "1.7.30"
+    implementation group: "org.http4k", name: "http4k-core", version: http4kVersion
+    implementation group: "org.http4k", name: "http4k-server-undertow", version: http4kVersion
+    implementation group: "org.http4k", name: "http4k-client-apache", version: http4kVersion
+    implementation group: "org.flywaydb", name: "flyway-core", version: "6.3.1"
+    implementation group: "com.h2database", name: "h2", version: "1.4.197"
+    implementation group: "org.jetbrains.exposed", name: "exposed-core", version: "0.25.1"
+    implementation group: "org.jetbrains.exposed", name: "exposed-dao", version: "0.25.1"
+    implementation group: "org.jetbrains.exposed", name: "exposed-jdbc", version: "0.25.1"
+    implementation group: "org.postgresql", name: "postgresql", version: "42.2.11"
+    implementation group: "org.slf4j", name: "slf4j-api", version: "1.7.30"
+    implementation group: "org.slf4j", name: "slf4j-simple", version: "1.7.30"
+    implementation group: "org.mindrot", name: "jbcrypt", version: "0.4"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 compileKotlin {
